# BABulletinBotV2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  bot.py  bulletin.py  main.py
app/services/: __init__.py  cache.py  downloads.py  drive.py  linktree.py
app/utils/: common.py
testing_scripts/: test_fetch.py  test_songbook.py
